Fixed heading margin top spacing

--- a/css/headingStyle.css
+++ b/css/headingStyle.css
@@ -3,7 +3,6 @@
     text-decoration: none;
     position: relative;
     -webkit-tap-highlight-color: transparent;
-    font-size: 1.1em;
 }
 .a-h:hover {
     text-decoration: none;
